# detroit-live

./: README.md  pyproject.toml  requirements.txt
detroit_live/: __init__.py  app.py  bind.py  create.py  events.py  hashtree.py  live.py  selection.py  types.py
detroit_live/dispatch/: __init__.py  dispatch.py
detroit_live/drag/: drag.py  drag_event.py  event.py  nodrag.py  noevent.py
detroit_live/events/: __init__.py  base.py  context_listener.py  diffdict.py  event_listeners.py  event_producers.py  event_source.py  headers.py  pointer.py  tracking_tree.py  types.py  utils.py
detroit_live/force/: simulation.py
detroit_live/live/: __init__.py  app.py  diffdict.py  events.py  live.py  pointer.py
detroit_live/selection/: __init__.py  active.py  app.py  hashtree.py  on.py  select.py  selection.py  shared.py
detroit_live/timer/: __init__.py  interval.py  timeout.py  timer.py
detroit_live/tracking_tree/: __init__.py  get_root.py  hashpath.py  tree.py
detroit_live/zoom/: __init__.py  noevent.py  transform.py  zoom.py  zoom_event.py  zoom_state.py
docs/source/: conf.py  force_graph.rst  heatmap.rst  index.rst  index_chart.rst  job_projections.rst  quadtree.rst  rainbow.rst  wealth_health.rst
examples/: disjoint_force_graph.py  heatmap.py  index_chart.py  job_projections.css  job_projections.py  quadtree_find_circle.py  rainbow_circles.py  selects.py  wealth_health.py
examples/styles/: heatmap.css  quadtree_find_circle.css
tests/: test_events.py
tests/test_dispatch/: test_dispatch.py
tests/test_events/: test_context_listener.py  test_headers.py  (+6 more)
(+20 files in other folders)
