[project]
name = "detroit-live"
description = "detroit-live is based on detroit and aims to bring interactivity to visualizations"
version = "0.1.0"
readme = "README.md"
authors = [
  { name = "Benjamin BOURBON", email = "ben.bourbon06@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
  "lxml",
  "detroit==2.6.0",
  "quart",
  "orjson",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization",
]
license-files = ["LICENSE"]
